--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.4.0",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
