--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "0.0.13",
+    "@types/react": "^18.0.20",
     "babel-plugin-named-exports-order": "0.0.2",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
