--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "classnames": "^2.3.2",
     "formik": "^2.2.9",
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
