--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-table": "^7.8.0",
     "recharts": "^2.1.14",
     "redux": "^4.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
