--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "react-table": "^7.8.0",
@@ -74,8 +74,10 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "0.0.13",
     "babel-plugin-named-exports-order": "0.0.2",
+    "customize-cra": "^1.0.0",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
+    "react-app-rewired": "^2.2.1",
     "sass": "^1.54.4",
     "webpack": "^5.74.0"
   }
