--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
