--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
